--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,47 @@
-.options{
-    float: left;
-    width: 25%;
+.maingrid{
+    display: grid;
+    grid-template-columns: 20% 60% 20%;
+    grid-template-rows: 5rem auto;
+    grid-template-areas:
+        "capt capt capt"
+        "opt brd win";
 }
 
-.board{
-    float: left;
-    width: 50%;
-}
-
-.winner{
-    float: right;
-    width: 25%;
+#caption{
+    grid-area: capt;
     text-align: center;
+}
+#idBoard{
+    grid-area: brd;
+}
+#idWinner{
+    grid-area: win;
+    grid-template-rows: repeat(4, 1fr);
+    text-align: center;
+}
+.winner-label{
+    text-align: center;
+}
+
+.options{
+    grid-template-rows: repeat(4, 1fr);
+    grid-area: opt;
+}
+.board{
+    display: grid;
+    grid-template-rows: repeat(25, auto);
+    grid-template-columns: repeat(55, auto);
+    grid-gap: 3px;
+    justify-content: center;
+    align-content: center;
+}
+.board>div{
+    border: 1px solid black;
+    place-self: stretch / stretch;
+}
+img {
+    max-width: 100%;
+    max-height: 100%;
 }
 
 button{
@@ -19,18 +49,6 @@ button{
     margin-bottom: 20px;
     margin-top: 20px;
     width: 100%;
-}
-
-h3{
-    text-align: center;
-}
-.winner-label{
-    text-align: center;
-}
-#idWinnerImage{
-    text-align: center;
-}
-button{
     color: black;
     background-color: cornflowerblue;
 }
