--- a/css/style.css
+++ b/css/style.css
@@ -14,16 +14,18 @@
 #idBoard{
     grid-area: brd;
 }
-#idWinner{
-    grid-area: win;
+
+.winner{
+    display: grid;
     grid-template-rows: repeat(4, 1fr);
-    text-align: center;
-}
-.winner-label{
-    text-align: center;
+    grid-template-columns: auto;
+    grid-area: win;
+    justify-content: center;
+    align-content: center;
 }
 
 .options{
+    display: grid;
     grid-template-rows: repeat(4, 1fr);
     grid-area: opt;
 }
